--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
 <h1>this is my new website!</h1>
-<img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
+  <ul>
+    <li><a href='page2.html'>Link to page 2</a></li>
+    <li><a href='page3.html'>Link to page 3</a></li>
+  <ul>
 </html>
