--- a/page3.html
+++ b/page3.html
@@ -4,5 +4,6 @@
 <ol>
   <li><a href='index.html'>Back to home</a></li>
   <li><a href='page2.html'>link to page 3</a></li>
-</ol>
+  <img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
+  </ol>
 <html>
