--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,7 @@
 <ol>
   <li><a href='index.html'>Back to home</a></li>
   <li><a href='page2.html'>link to page 3</a></li>
-  <img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
+  <span><img src="http://i.huffpost.com/gen/2264618/images/o-BOB-ROSS-JOY-OF-PAINTING-facebook.jpg"></img></span>
+  <span><img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img></span>
   </ol>
 <html>
