--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,5 @@
 <html>
-<h1>you came from the index</h1>
-<h2>you are not at page 2!</h2>
+<h1>PAGE2</h1>
 <ol>
   <li><a href='index.html'>Back to home</a></li>
   <li><a href='page3.html'>link to page 3</a></li>
