--- a/page3.html
+++ b/page3.html
@@ -1,6 +1,5 @@
 <html>
-<h1>you came from the index</h1>
-<h2>you are at page 3!</h2>
+<h1>PAGE3</h1>
 <ol>
   <li><a href='index.html'>Back to home</a></li>
   <li><a href='page2.html'>link to page 3</a></li>
