--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,6 @@
 <ol>
   <li><a href='index.html'>Back to home</a></li>
   <li><a href='page2.html'>link to page 2</a></li>
-  <span><img src="http://i.huffpost.com/gen/2264618/images/o-BOB-ROSS-JOY-OF-PAINTING-facebook.jpg"></img></span>
+  <img src="http://i.huffpost.com/gen/2264618/images/o-BOB-ROSS-JOY-OF-PAINTING-facebook.jpg"></img>
   </ol>
 <html>
