--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <title>Explore</title>
+  <meta charset="UTF-8">
 <h1>this is my new website!</h1>
   <ul>
     <li><a href='page2.html'>Link to page 2</a></li>
