--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
 <html>
+  <title>Explore</title>
+  <meta charset="UTF-8">
 <h1>PAGE2</h1>
 <ol>
   <li><a href='index.html'>Back to home</a></li>
