--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+ <head>
   <title>Explore</title>
   <meta charset="UTF-8">
-<h1>this is my new website!</h1>
-  <ul>
+ </head>
+  <body>
+    <h1>this is my new website!</h1>
+    <ul>
     <li><a href='page2.html'>Link to page 2</a></li>
     <li><a href='page3.html'>Link to page 3</a></li>
-  <ul>
+    <ul>
+    </body>
 </html>
