--- a/page2.html
+++ b/page2.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <title>Explore</title>
-  <meta charset="UTF-8">
-<h1>PAGE2</h1>
-<ol>
-  <li><a href='index.html'>Back to home</a></li>
-  <li><a href='page3.html'>link to page 3</a></li>
-  <img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
-</ol>
-<html>
+  <head>
+    <title>Explore pg.2</title>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <h1>PAGE2</h1>
+    <ol>
+    <li><a href='index.html'>Back to home</a></li>
+    <li><a href='page3.html'>link to page 3</a></li>
+    <img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
+    </ol>
+  <body>
+</html>
