--- a/page3.html
+++ b/page3.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <title>Explore</title>
-  <meta charset="UTF-8">
-<h1>PAGE3</h1>
-<ol>
-  <li><a href='index.html'>Back to home</a></li>
-  <li><a href='page2.html'>link to page 2</a></li>
-  <img src="http://i.huffpost.com/gen/2264618/images/o-BOB-ROSS-JOY-OF-PAINTING-facebook.jpg"></img>
-  </ol>
-<html>
+  <head>
+    <title>Explore</title>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <h1>PAGE3</h1>
+    <ol>
+    <li><a href='index.html'>Back to home</a></li>
+    <li><a href='page2.html'>link to page 2</a></li>
+    <img src="http://i.huffpost.com/gen/2264618/images/o-BOB-ROSS-JOY-OF-PAINTING-facebook.jpg"></img>
+    </ol>
+  </body>
+</html>
