--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Explore</title>
+    <title>Explore pg.3</title>
     <meta charset="UTF-8">
   </head>
   <body>
