--- a/page2.html
+++ b/page2.html
@@ -11,5 +11,5 @@
     <li><a href='page3.html'>link to page 3</a></li>
     <img src="https://blogs.adobe.com/creativecloud/files/2016/01/6_Faux-Bob-Ross-l-1800x1013.jpg"></img>
     </ol>
-  <body>
+  </body>
 </html>
